[gd_scene load_steps=2 format=3 uid="uid://bmygasw6p144p"]

[ext_resource type="Script" path="res://Modular-Weapon-Manager/gun_component/gun_component.gd" id="1_e141f"]

[node name="GunComponent2D" type="Node2D"]
script = ExtResource("1_e141f")

[node name="ReloadTimer" type="Timer" parent="."]
one_shot = true

[node name="FirerateTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="ReloadTimer" to="." method="_on_reload_timer_timeout"]
[connection signal="timeout" from="FirerateTimer" to="." method="_on_firerate_timer_timeout"]
